[metadata]
name = tahu-jbrzozoski
version = 0.5.13
author = Justin Brzozoski
author_email = justin.brzozoski@signal-fire.com
description = Eclipse Tahu Sparkplug/MQTT Client
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eclipse/tahu
project_urls =
    Bug Tracker = https://github.com/eclipse/tahu/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = core
packages = find:
install_requires = 
    paho-mqtt >= 1.6.1
python_requires = >=3.6

[options.packages.find]
where = core
